# langchain_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
1-langchainbasics/: langchainbasics.ipynb  qachatbot.py
